# FinanceDashboard

./: README.md  pyproject.toml
data/: crossasset.pkl
notebooks/: crossasset_preprocessing.ipynb
