[tool.poetry]
name = "st_financedashboard"
version = "0.1.0"
description = ""
authors = ["jaepil-choi <chljeffreyz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.10.0"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
plotly = "^5.9.0"
jupyterlab = "^3.4.3"
tqdm = "^4.64.0"
finance-datareader = "^0.9.34"
QuantStats = "^0.0.58"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
